# Qt_TCP_C-S

JOY_TCP/: CMakeLists.txt  JoystickOnex.cpp  JoystickOnex.h  asd  main.cpp
QtTCP/: CMakeLists.txt  ServeStructure.cpp  main.cpp  ㄴㅁㅇㅁㄴ
QtTCP/include/: TcpCommunication.hpp
QtTCP/src/: TcpCommunication.cpp  main.cpp
QtTCPClient/: CMakeLists.txt  JoystickOnex.cpp  JoystickOnex.h  QtTCPClient.cpp  QtTCPClient.h  ServeStructure.cpp  ThreadGenerator.cpp  joy.cpp  joy.h  main.cpp
QtTCPClient/camel-tools/: README.md  tools_install.sh
QtTCPClient/camel-tools/examples/src/: example_TrajectoryGenerator.cpp
QtTCPClient/camel-tools/sensor/include/: LordImu3DmGx5Ahrs.hpp  T265.hpp
QtTCPClient/camel-tools/sensor/src/: LordImu3DmGx5Ahrs.cpp  T265.cpp
QtTCPClient/camel-tools/thread/: CMakeLists.txt
QtTCPClient/camel-tools/trajectory/: CMakeLists.txt
QtTCPClient/camel-tools/trajectory/include/: CubicTrajectoryGenerator.hpp  trajectory.hpp
QtTCPClient/camel-tools/trajectory/src/: CubicTrajectoryGenerator.cpp  QuinticTrajectoryGenerator.cpp  SineTrajectoryGenerator.cpp
QtTCPClient/include/: TcpCommunication.hpp
QtTCPClient/src/: JoystickOnex.cpp  TcpCommunication.cpp  main.cpp
